--- a/CaseStudyFoodService/.gitignore
+++ b/CaseStudyFoodService/.gitignore
@@ -13,13 +13,14 @@ target/
 .springBeans
 .sts4-cache
 springbase.iml
-
+application
+src/main/resources/applications.properties
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
-applications.properties
+
 
 ### NetBeans ###
 /nbproject/private/
