--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 *.idea/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/CaseStudyFoodService/src/main/resources/application.properties
+/CaseStudyFoodService/springbase.iml
+/CaseStudyFoodService/src/main/resources/
