--- a/CaseStudyFoodService/src/main/resources/application.properties
+++ b/CaseStudyFoodService/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/casestudy
 spring.datasource.username=root
-spring.datasource.password=2021
+spring.datasource.password=Exocherms#121821**
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-server.port=8081
